--- a/corporate.html
+++ b/corporate.html
@@ -13,7 +13,7 @@
 		content="Специальные условия для корпоративных клиентов 2ATM: обслуживание автопарков, выгодные тарифы, безналичная оплата. Свяжитесь с нами для подбора индивидуальных условий!">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Корпоративным клиентам</title>
-	<link rel="stylesheet" href="./styles/pages/corporate/corporate.css">
+	<link rel="stylesheet" href="./styles/pages/corporate-page/corporate.css">
 </head>
 
 
@@ -131,9 +131,7 @@
 				<li class="header-menu__item">
 					<a href="#!">Заправка кондиционеров</a>
 				</li>
-				<li class="header-menu__item">
-					<a href="#!">Техосмотр</a>
-				</li>
+
 				<li class="header-menu__item">
 					<a href="#!">Развал-схождение</a>
 				</li>
@@ -147,20 +145,17 @@
 
 			<nav class="header__menu header-menu">
 				<ul class="header-menu__list">
-					<li>
+					<li class="header-menu__item">
 						<a href="#!">Шиномонтаж</a>
 					</li>
-					<li>
+					<li class="header-menu__item">
 						<a href="#!">Автомойка</a>
 					</li>
-					<li>
+					<li class="header-menu__item">
 						<a href="#!">Заправка кондиционеров</a>
 					</li>
-					<li>
+					<li class="header-menu__item">
 						<a href="#!">Автосервис</a>
-					</li>
-					<li>
-						<a href="#!">Техосмотр</a>
 					</li>
 				</ul>
 			</nav>
@@ -453,7 +448,7 @@
 			<div class="advantages__slider">
 				<ul class="swiper-wrapper advantages__slider-wrapper">
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/marker.webp" width="60" height="60"
+						<img class="advantage-card__image" src="./images/icons/icon-marker.webp" width="60" height="60"
 							alt="Иконка отметки на карте" loading="lazy">
 
 						<h3 class="advantage-card__heading">
@@ -469,7 +464,7 @@
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/price-tag.webp" width="60" height="60"
+						<img class="advantage-card__image" src="./images/icons/icon-ruble.webp" width="60" height="60"
 							alt="Иконка с валютой" loading="lazy">
 
 						<h3 class="advantage-card__heading">
@@ -484,7 +479,7 @@
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/clock-2.webp" width="60" height="60" alt="Часы"
+						<img class="advantage-card__image" src="./images/icons/icon-clock-2.webp" width="60" height="60" alt="Часы"
 							loading="lazy">
 
 						<h3 class="advantage-card__heading">
@@ -565,7 +560,7 @@
 							alt="Шестерёнка" loading="lazy">
 
 						<h3 class="other-service-card__name">
-							СТО ремонт
+							Автосервис
 						</h3>
 
 						<span class="other-service-card__link-text">
@@ -576,13 +571,30 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о техосмотре">
+						title="Подробее о СТО ремонте">
 
-						<img class="other-service-card__image" src="./images/icons/icon-technical-inspection.webp" width="60"
-							height="60" alt="Технический осмотр автомобиля" loading="lazy">
+						<img class="other-service-card__image" src="./images/icons/icon-dry-cleaning.webp" width="60" height="60"
+							alt="Щётка" loading="lazy">
 
 						<h3 class="other-service-card__name">
-							Техосмотр
+							Химчистка
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о СТО ремонте">
+
+						<img class="other-service-card__image" src="./images/icons/icon-studding.webp" width="60" height="60"
+							alt="Ошиповка шины" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Ошиповка шин
 						</h3>
 
 						<span class="other-service-card__link-text">
@@ -617,6 +629,23 @@
 
 						<h3 class="other-service-card__name">
 							Развал-схождение
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о развале-схождении">
+
+						<img class="other-service-card__image" src="./images/icons/icon-welding.webp" width="60" height="60"
+							alt="Сварка" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Сварка аргоном
 						</h3>
 
 						<span class="other-service-card__link-text">
@@ -752,10 +781,6 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Технический осмотр</a>
-								</li>
-
-								<li class="footer-svc-links__item">
 									<a class="footer-svc-links__link" href="#!">Развал-схождение</a>
 								</li>
 
@@ -776,27 +801,6 @@
 	<script src="./libs/swiper/swiper-bundle.min.js"></script>
 
 	<script>
-		// const possobilitiesSlider = new Swiper(".possobilities__slider", {
-		// 	/* Настройки только для слайдера на странице "Аренда и развитие" */
-		// 	slidesPerView: "auto",
-		// 	grid: {
-		// 		rows: 1,
-		// 		fill: "row",
-		// 	},
-		// 	spaceBetween: 10,
-		// 	breakpoints: {
-		// 		1024: {
-		// 			spaceBetween: 24,
-		// 		},
-		// 		1600: {
-		// 			grid: {
-		// 				rows: 2,
-		// 			},
-		// 		},
-		// 	},
-		// 	grabCursor: true
-		// });
-
 		const possobilitiesSlider = new Swiper(".possobilities__slider", {
 			slidesPerView: "auto",
 			grid: {
@@ -846,7 +850,6 @@
 			},
 			grabCursor: true
 		});
-
 	</script>
 
 </body>
