--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<nav class="header-menu header-menu--not-to-scroll header-menu--color-accent">
 			<ul class="header-menu__list container">
 				<li class="header-menu__item">
-					<a href="#!">Шиномонтаж</a>
+					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="#!">Автомойка</a>
@@ -146,7 +146,7 @@
 			<nav class="header__menu header-menu">
 				<ul class="header-menu__list">
 					<li class="header-menu__item">
-						<a href="#!">Шиномонтаж</a>
+						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="#!">Автомойка</a>
@@ -240,7 +240,7 @@
 								<img class="service__name-icon" src="./images/icons/icon-tire-fitting.webp" width="60" height="60"
 									alt="Колесо" loading="lazy">
 
-								<a class="service__link service__link--name" href="#!">Шиномонтаж</a>
+								<a class="service__link service__link--name" href="./tire-fitting.html">Шиномонтаж</a>
 							</h4>
 
 							<ul class="services-menu__service-list service__list">
@@ -1930,7 +1930,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Шиномонтаж</a>
+									<a class="footer-svc-links__link" href="./tire-fitting.html">Шиномонтаж</a>
 								</li>
 
 								<li class="footer-svc-links__item">
