--- a/offer.html
+++ b/offer.html
@@ -119,7 +119,7 @@
 		<nav class="header-menu header-menu--not-to-scroll header-menu--color-accent">
 			<ul class="header-menu__list container">
 				<li class="header-menu__item">
-					<a href="#!">Шиномонтаж</a>
+					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="#!">Автомойка</a>
@@ -145,7 +145,7 @@
 			<nav class="header__menu header-menu">
 				<ul class="header-menu__list">
 					<li class="header-menu__item">
-						<a href="#!">Шиномонтаж</a>
+						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="#!">Автомойка</a>
@@ -374,7 +374,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Шиномонтаж</a>
+									<a class="footer-svc-links__link" href="./tire-fitting.html">Шиномонтаж</a>
 								</li>
 
 								<li class="footer-svc-links__item">
