--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -100,11 +100,11 @@
 					</a>
 				</address>
 
-				<a class="header__button button button--accent-bg visible-tablet" href="#!">
+				<a class="button button--accent-bg visible-tablet" href="#!">
 					Запись&nbsp;на&nbsp;сайте
 				</a>
 
-				<a class="header__button button" href="#!">
+				<a class="button" href="#!">
 					<span class="header-buttons__link-text hidden-tablet">
 						Записаться&nbsp;в&nbsp;Telegram
 					</span>
@@ -159,7 +159,7 @@
 				</ul>
 			</nav>
 
-			<a class="header__button button" href="#!">
+			<a class="button" href="#!">
 				<span class="header-buttons__link-text">
 					Запись&nbsp;в&nbsp;Telegram
 				</span>
@@ -191,7 +191,7 @@
 				</ul>
 			</nav>
 
-			<h2 class="page-heading__page-name page-heading__page-name--letter-spacing h3" id="page-title">
+			<h2 class="page-heading__page-name h3" id="page-title">
 				Шиномонтаж
 			</h2>
 		</section>
@@ -255,10 +255,17 @@
 			</div>
 		</section>
 
-		<!-- <section class="locations container section section--big-to-medium-margin" aria-labelledby="location-title">
-			<h2 class="section__title section__title--center h3" id="location-title">
+		<section class="locations container section section--big-to-medium-margin" aria-labelledby="location-title">
+			<h2 class="section__title section__title--center h3 hidden-mobile" id="location-title">
 				Наши адреса
 			</h2>
+
+			<div class="section__subtitle section__subtitle--tire-fitting-page hidden-mobile">
+				<p>
+					Наши шиномонтажи расположены рядом с&nbsp;крупными жилыми комплексами и магазинами, чтобы вы&nbsp;могли
+					поменять резину или сделать ремонт не&nbsp;меняя ваших планов
+				</p>
+			</div>
 
 			<div class="locations__body">
 				<ul class="locations__list">
@@ -300,10 +307,10 @@
 
 									<p>
 										<svg width="14" height="14" viewBox="0 0 12 11">
-											<use xlink:href="./images/icons/sprite-icons.svg#star-rating"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
 										</svg>
 
-										<span data-js-location-card-rating>4,7</span>
+										<span data-js-location-card-rating>4,3</span>
 										<span data-js-location-card-set-services>
 											СТО, Мойка<span class="hidden-mobile">, Шиномонтаж, ТО</span>
 										</span>
@@ -353,10 +360,10 @@
 
 									<p>
 										<svg width="14" height="14" viewBox="0 0 12 11">
-											<use xlink:href="./images/icons/sprite-icons.svg#star-rating"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
 										</svg>
 
-										<span data-js-location-card-rating>4,7</span>
+										<span data-js-location-card-rating>4,3</span>
 										<span data-js-location-card-set-services>
 											СТО, Мойка<span class="hidden-mobile">, Шиномонтаж, ТО</span>
 										</span>
@@ -406,10 +413,10 @@
 
 									<p>
 										<svg width="14" height="14" viewBox="0 0 12 11">
-											<use xlink:href="./images/icons/sprite-icons.svg#star-rating"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
 										</svg>
 
-										<span data-js-location-card-rating>4,7</span>
+										<span data-js-location-card-rating>4,3</span>
 										<span data-js-location-card-set-services>
 											СТО, Мойка<span class="hidden-mobile">, Шиномонтаж, ТО</span>
 										</span>
@@ -459,10 +466,10 @@
 
 									<p>
 										<svg width="14" height="14" viewBox="0 0 12 11">
-											<use xlink:href="./images/icons/sprite-icons.svg#star-rating"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
 										</svg>
 
-										<span data-js-location-card-rating>4,7</span>
+										<span data-js-location-card-rating>4,3</span>
 										<span data-js-location-card-set-services>
 											СТО, Мойка<span class="hidden-mobile">, Шиномонтаж, ТО</span>
 										</span>
@@ -512,10 +519,10 @@
 
 									<p>
 										<svg width="14" height="14" viewBox="0 0 12 11">
-											<use xlink:href="./images/icons/sprite-icons.svg#star-rating"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
 										</svg>
 
-										<span data-js-location-card-rating>4,7</span>
+										<span data-js-location-card-rating>4,3</span>
 										<span data-js-location-card-set-services>
 											СТО, Мойка<span class="hidden-mobile">, Шиномонтаж, ТО</span>
 										</span>
@@ -556,7 +563,7 @@
 					</svg>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<section class="cost-service section section--big-to-medium-margin" aria-labelledby="cost-service-title">
 			<h2 class="cost-service__title h3" id="cost-service-title">
@@ -1144,7 +1151,274 @@
 			</div>
 		</section>
 
-		<section class="advantages section container" aria-labelledby="advantages-title">
+
+		<section class="soc1al-proof section section--static-margin" aria-labelledby="soc1al-proof-title">
+			<h2 class="visually-hidden" id="soc1al-proof-title">Описание преимуществи и рейтинги 2АТМ</h2>
+
+			<section class="soc1al-proof__inner">
+				<h3 class="soc1al-proof__title h3">
+					У&nbsp;нас высокий рейтинг
+				</h3>
+
+				<div class="soc1al-proof__text">
+					<p>
+						Сеть шиномонтажных мастерских «Две атмосферы» – это ваш надежный партнер в Санкт-Петербурге. Мы используем
+						современное оборудование и качественные материалы от проверенных поставщиков. Предлагаем широкий спектр
+						услуг, от замены шин до ремонта дисков и сезонного хранения. Посетите один из наших филиалов и оцените все
+						преимущества!
+					</p>
+				</div>
+
+				<div class="soc1al-proof__advantages">
+					<section class="soc1al-proof__advantage">
+						<h4 class="soc1al-proof__advantage-name">
+							Преимущества
+						</h4>
+
+						<ul>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Быстрое и&nbsp;качественное обслуживание
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Вежливый и&nbsp;внимательный персонал
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Конкурентные цены
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Удобное расположение
+							</li>
+						</ul>
+					</section>
+
+					<section class="soc1al-proof__advantage">
+						<h4 class="soc1al-proof__advantage-name">
+							Дополнительные услуги
+						</h4>
+
+						<ul>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Современное оборудование и&nbsp;материалы
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Широкий спектр услуг
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Сезонное хранение шин
+							</li>
+							<li class="soc1al-proof__text soc1al-proof__text--advantage">
+								Предварительная запись
+							</li>
+						</ul>
+					</section>
+				</div>
+
+				<div class="soc1al-proof__text">
+					<p>
+						​Наша сеть шиномонтажных мастерских &laquo;Две атмосферы&raquo; в&nbsp;Санкт-Петербурге получила множество
+						положительных отзывов от&nbsp;клиентов. Средний рейтинг наших мастерских 4.8 баллов на&nbsp;Яндекс Картах
+					</p>
+				</div>
+
+			</section>
+
+			<section class="soc1al-proof__rating">
+				<h3 class="visually-hidden">Рейтинги сервисов 2АТМ</h3>
+
+				<button class="soc1al-proof-slider__prev-slide hidden-mobile-medium" aria-label="предыдущий слайд"
+					title="Назад">
+					<svg class="soc1al-proof-slider__switch-icon" width="11" height="16" viewBox="0 0 11 16">
+						<use xlink:href="./images/icons/sprite-icons.svg#switch-icon"></use>
+					</svg>
+				</button>
+
+				<div class="soc1al-proof-slider">
+					<ul class="soc1al-proof-slider__wrapper swiper-wrapper">
+						<li class="soc1al-proof-slider__slide swiper-slide">
+							<a class="soc1al-proof-slider__slide-link" href="#!" aria-label="Рейтинг сервиса">
+								<article class="review-card" id="review-1">
+									<h3 class="review-card__title" data-js-review-locattion>
+										пр. Просвещения, д.&nbsp;74&nbsp;корп.&nbsp;2&nbsp;лит. А
+									</h3>
+
+									<div class="review-card__content">
+										<img class="review-card__image" src="./images/reviews/temple-of-review-image.webp" width="56"
+											height="56" alt="Фото СТО" loading="lazy" data-js-review-image>
+
+										<div class="review-card__description">
+											<p class="review-card__text" data-js-review-set-services>
+												Шиномонтаж, СТО, Мойка
+											</p>
+
+											<p class="review-card__text review-card__text--color-light">
+												<svg width="14" height="14" viewBox="0 0 12 11">
+													<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
+												</svg>
+
+												<span class="review-card__text review-card__text--color-dark" data-js-review-rating>
+													4,3
+												</span>
+
+												<span data-js-review-quantity>
+													65 отзывов
+												</span>
+											</p>
+										</div>
+									</div>
+								</article>
+							</a>
+						</li>
+
+						<li class="soc1al-proof-slider__slide swiper-slide">
+							<a class="soc1al-proof-slider__slide-link" href="#!" aria-label="Рейтинг сервиса">
+								<article class="review-card" id="review-2">
+									<h3 class="review-card__title" data-js-review-locattion>
+										пр. Просвещения, д.&nbsp;74&nbsp;корп.&nbsp;2&nbsp;лит. А
+									</h3>
+
+									<div class="review-card__content">
+										<img class="review-card__image" src="./images/reviews/temple-of-review-image.webp" width="56"
+											height="56" alt="Фото СТО" loading="lazy" data-js-review-image>
+
+										<div class="review-card__description">
+											<p class="review-card__text" data-js-review-set-services>
+												Шиномонтаж, СТО, Мойка
+											</p>
+
+											<p class="review-card__text review-card__text--color-light">
+												<svg width="14" height="14" viewBox="0 0 12 11">
+													<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
+												</svg>
+
+												<span class="review-card__text review-card__text--color-dark" data-js-review-rating>
+													4,3
+												</span>
+												<span data-js-review-quantity>
+													65 отзывов
+												</span>
+											</p>
+										</div>
+									</div>
+								</article>
+							</a>
+						</li>
+
+						<li class="soc1al-proof-slider__slide swiper-slide">
+							<a class="soc1al-proof-slider__slide-link" href="#!" aria-label="Рейтинг сервиса">
+								<article class="review-card" id="review-3">
+									<h3 class="review-card__title" data-js-review-locattion>
+										пр. Просвещения, д.&nbsp;74&nbsp;корп.&nbsp;2&nbsp;лит. А
+									</h3>
+
+									<div class="review-card__content">
+										<img class="review-card__image" src="./images/reviews/temple-of-review-image.webp" width="56"
+											height="56" alt="Фото СТО" loading="lazy" data-js-review-image>
+
+										<div class="review-card__description">
+											<p class="review-card__text" data-js-review-set-services>
+												Шиномонтаж, СТО, Мойка
+											</p>
+
+											<p class="review-card__text review-card__text--color-light">
+												<svg width="14" height="14" viewBox="0 0 12 11">
+													<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
+												</svg>
+
+												<span class="review-card__text review-card__text--color-dark" data-js-review-rating>
+													4,3
+												</span>
+												<span data-js-review-quantity>
+													65 отзывов
+												</span>
+											</p>
+										</div>
+									</div>
+								</article>
+							</a>
+						</li>
+
+						<li class="soc1al-proof-slider__slide swiper-slide">
+							<a class="soc1al-proof-slider__slide-link" href="#!" aria-label="Рейтинг сервиса">
+								<article class="review-card" id="review-4">
+									<h3 class="review-card__title" data-js-review-locattion>
+										пр. Просвещения, д.&nbsp;74&nbsp;корп.&nbsp;2&nbsp;лит. А
+									</h3>
+
+									<div class="review-card__content">
+										<img class="review-card__image" src="./images/reviews/temple-of-review-image.webp" width="56"
+											height="56" alt="Фото СТО" loading="lazy" data-js-review-image>
+
+										<div class="review-card__description">
+											<p class="review-card__text" data-js-review-set-services>
+												Шиномонтаж, СТО, Мойка
+											</p>
+
+											<p class="review-card__text review-card__text--color-light">
+												<svg width="14" height="14" viewBox="0 0 12 11">
+													<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
+												</svg>
+
+												<span class="review-card__text review-card__text--color-dark" data-js-review-rating>
+													4,3
+												</span>
+												<span data-js-review-quantity>
+													65 отзывов
+												</span>
+											</p>
+										</div>
+									</div>
+								</article>
+							</a>
+						</li>
+
+						<li class="soc1al-proof-slider__slide swiper-slide">
+							<a class="soc1al-proof-slider__slide-link" href="#!" aria-label="Рейтинг сервиса">
+								<article class="review-card" id="review-5">
+									<h3 class="review-card__title" data-js-review-locattion>
+										пр. Просвещения, д.&nbsp;74&nbsp;корп.&nbsp;2&nbsp;лит. А
+									</h3>
+
+									<div class="review-card__content">
+										<img class="review-card__image" src="./images/reviews/temple-of-review-image.webp" width="56"
+											height="56" alt="Фото СТО" loading="lazy" data-js-review-image>
+
+										<div class="review-card__description">
+											<p class="review-card__text" data-js-review-set-services>
+												Шиномонтаж, СТО, Мойка
+											</p>
+
+											<p class="review-card__text review-card__text--color-light">
+												<svg width="14" height="14" viewBox="0 0 12 11">
+													<use xlink:href="./images/icons/sprite-icons.svg#star-rating-yellow"></use>
+												</svg>
+
+												<span class="review-card__text review-card__text--color-dark" data-js-review-rating>
+													4,3
+												</span>
+												<span data-js-review-quantity>
+													65 отзывов
+												</span>
+											</p>
+										</div>
+									</div>
+								</article>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+
+				<button class="soc1al-proof-slider__next-slide hidden-mobile-medium" aria-label="следующий слайд" title="Ещё">
+					<svg class="soc1al-proof-slider__switch-icon" width="11" height="16" viewBox="0 0 11 16">
+						<use xlink:href="./images/icons/sprite-icons.svg#switch-icon"></use>
+					</svg>
+				</button>
+			</section>
+		</section>
+
+
+
+		<section class="advantages section section--big-margin container" aria-labelledby="advantages-title">
 			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
@@ -1216,7 +1490,8 @@
 			</div>
 		</section>
 
-		<section class="appointment-choose section container" aria-labelledby="appointment-choose-title">
+		<section class="appointment-choose section section--extra-big-margin container"
+			aria-labelledby="appointment-choose-title">
 			<h2 class="visually-hidden">Выбор способа записи в мастерскую 2АТМ</h2>
 
 			<div class="appointment-choose__wrapper">
@@ -1231,11 +1506,11 @@
 				</h3>
 
 				<div class="appointment-choose__buttons">
-					<a class="button" href="#!" target="_blank">
+					<a class="appointment-choose__button button" href="#!" target="_blank">
 						В&nbsp;Telegram
 					</a>
 
-					<a class="button button--accent-bg" href="#!">
+					<a class="appointment-choose__button button button--accent-bg" href="#!">
 						На&nbsp;сайте
 					</a>
 				</div>
@@ -1285,7 +1560,7 @@
 
 			<ul class="other-services__list">
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./tire-fitting.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о шиномонтаже">
 
 						<img class="other-service-card__image" src="./images/icons/icon-tire-fitting.webp" width="60" height="60"
@@ -1461,23 +1736,23 @@
 			<nav class="footer__links">
 				<ul class="footer__links-list">
 					<li>
-						<a class="footer__links-link" href="./addresses.html">Адреса</a>
+						<a href="./addresses.html">Адреса</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
+						<a href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="./corporate.html">Корпоративным клиентам</a>
+						<a href="./corporate.html">Корпоративным клиентам</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Контакты</a>
+						<a href="#!">Контакты</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Аренда и&nbsp;развитие</a>
+						<a href="#!">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
@@ -1575,6 +1850,24 @@
 				rows: 1,
 			},
 			spaceBetween: 24,
+		});
+
+		const socialProofSlider = new Swiper(".soc1al-proof-slider", {
+			loop: true,
+			centeredSlides: true,
+			spaceBetween: 10,
+			slidesPerView: "auto",
+
+			navigation: {
+				nextEl: ".soc1al-proof-slider__next-slide",
+				prevEl: ".soc1al-proof-slider__prev-slide",
+			},
+			breakpoints: {
+				1024: {
+					// simulateTouch: false,
+					spaceBetween: 24,
+				}
+			}
 		});
 	</script>
 
