--- a/services.html
+++ b/services.html
@@ -101,11 +101,11 @@
 					</a>
 				</address>
 
-				<a class="header__button button button--accent-bg visible-tablet" href="#!">
+				<a class="button button--accent-bg visible-tablet" href="#!">
 					Запись&nbsp;на&nbsp;сайте
 				</a>
 
-				<a class="header__button button" href="#!">
+				<a class="button" href="#!">
 					<span class="header-buttons__link-text hidden-tablet">
 						Записаться&nbsp;в&nbsp;Telegram
 					</span>
@@ -160,7 +160,7 @@
 				</ul>
 			</nav>
 
-			<a class="header__button button" href="#!">
+			<a class="button" href="#!">
 				<span class="header-buttons__link-text">
 					Запись&nbsp;в&nbsp;Telegram
 				</span>
@@ -414,11 +414,11 @@
 				</h3>
 
 				<div class="appointment-choose__buttons">
-					<a class="button" href="#!" target="_blank">
+					<a class="appointment-choose__button button" href="#!" target="_blank">
 						В&nbsp;Telegram
 					</a>
 
-					<a class="button button--accent-bg" href="#!">
+					<a class="appointment-choose__button button button--accent-bg" href="#!">
 						На&nbsp;сайте
 					</a>
 				</div>
@@ -570,23 +570,23 @@
 			<nav class="footer__links">
 				<ul class="footer__links-list">
 					<li>
-						<a class="footer__links-link" href="./addresses.html">Адреса</a>
+						<a href="./addresses.html">Адреса</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
+						<a href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="./corporate.html">Корпоративным клиентам</a>
+						<a href="./corporate.html">Корпоративным клиентам</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Контакты</a>
+						<a href="#!">Контакты</a>
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Аренда и&nbsp;развитие</a>
+						<a href="#!">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
